fix line spacing

--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -12,9 +12,9 @@ body {
     -moz-osx-font-smoothing: grayscale;
     margin: 0 40px;
     font-size: $font-body;
-    line-height: 1.55em;
+    line-height: 1.45em;
     padding: 0;
-    letter-spacing: 0.02em;
+    letter-spacing: -0.01em;
     max-width: 100vw;
 }
 
