--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,9 +162,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0 40px;
   font-size: 21px;
-  line-height: 1.55em;
+  line-height: 1.45em;
   padding: 0;
-  letter-spacing: 0.02em;
+  letter-spacing: -0.01em;
   max-width: 100vw;
 }
 
